--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -319,3 +319,11 @@ h1 {
     margin: 0 auto;
     text-align: center;
 }
+
+.ds-btn {
+	margin: 3px 3px 3px;
+}
+
+.tbl-title {
+	font-weight: bold;
+}
