Updated baseline demo page

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -177,7 +177,7 @@ footer .logo {
 }
 
 .hero {
-	max-width: 500px;
+	max-width: 800px;
 	margin: 0 auto
 }
 
@@ -326,4 +326,11 @@ h1 {
 
 .tbl-title {
 	font-weight: bold;
+}
+
+.ctr-img {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 100%;
 }
