--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -335,7 +335,8 @@ h1 {
 
 .card-style {
 	padding: 10px;
-	padding-right: 30px;
+	padding-left: 20px;
+	padding-right: 20px;
 }
 
 .card-overlist {
